# ml2_ean_model_lifecycle

./: README.md  pyproject.toml
Código/: Autoencoders.ipynb  Modelado supervisado tradicional.ipynb
Código/.ipynb_checkpoints/: Autoencoders-checkpoint.ipynb  Modelado supervisado tradicional-checkpoint.ipynb
Código/mlruns/0/: meta.yaml
Código/mlruns/995258331024589579/: meta.yaml
Código/mlruns/995258331024589579/0a6b168fc6c64ef3ad269e5603252f4c/: meta.yaml
Código/mlruns/995258331024589579/0a6b168fc6c64ef3ad269e5603252f4c/metrics/: best_threshold_A  f1_score_A  precision_A  recall_A
Código/mlruns/995258331024589579/0a6b168fc6c64ef3ad269e5603252f4c/tags/: mlflow.log-model.history
Código/mlruns/995258331024589579/0c706af4e47d47bea49996fed0ef9df8/: meta.yaml
Código/mlruns/995258331024589579/0c706af4e47d47bea49996fed0ef9df8/tags/: mlflow.runName  mlflow.source.name
Código/mlruns/995258331024589579/1b34df5a98fd4042b5f8bff3ebf20ac6/: meta.yaml
Código/mlruns/995258331024589579/3b4ddd76cc68483a9bffefe68d42d0f7/: meta.yaml
Código/mlruns/995258331024589579/401111c557b141b5840c8ac127430748/: meta.yaml
Código/mlruns/995258331024589579/4f5ecccf6cc84498b50c17e3d935073d/: meta.yaml
Código/mlruns/995258331024589579/515ae67ae0384a9ab7710c411d3089c3/: meta.yaml
Código/mlruns/995258331024589579/74536d0d08474e8eba311a6acd315ed0/: meta.yaml
Devops/: Dockerfile  README.md  prometheus.yml
Documentación/: Autoencoders.html  Modelado supervisado tradicional.html
mlruns/0/: meta.yaml
mlruns/models/autoencoder-initial-version/: meta.yaml
(+38 files in other folders)
