[tool.poetry]
name = "ml2-ean-autoencoders"
version = "0.1.0"
description = ""
authors = ["Jiliar Silgado <jsilgado@lexipol.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.15"
kagglehub = "^0.3.11"
pandas = "^2.2.3"
seaborn = "^0.13.2"
scipy = "^1.15.2"
imblearn = "^0.0"
numpy = "^2.2.5"
matplotlib = "^3.10.1"
scikit-learn = "^1.6.1"
imbalanced-learn = "^0.13.0"
mlflow = "^2.22.0"
protobuf = "3.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
